--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
           <div class="col-xl-5" data-aos="fade-up" data-aos-delay="200">
             <h2 class="about-title">What is CESCa</h2>
-            <p class="about-description">ค่ายที่จัดขึ้นโดย คณะวิศวกรรมศาสตร์ ภาควิชาวิศวกรรมคอมพิวเตอร์ มหาวิทยาลัยขอนแก่น ซึ่งค่ายที่จัดขึ้นมาเพื่อน้องๆ ม.ปลาย ที่จะได้เรียนรู้จักคำว่า “วิศวกรรมคอมพิวเตอร์” อย่างจริงจัง น้องๆ จะได้เรียนรู้และสัมผัสถึงกลิ่นอาย ทั้งด้านการเรียน และการทำกิจกรรม นอกเหนือจากนั้น น้องๆ จะได้รู้จักเพื่อนต่างสถาบันที่มีความสนใจในด้านเดียวกัน และยังได้ร่วมแลกเปลี่ยนประสบการณ์และความคิดเห็นในมุมมองของวิศวกรรมคอมพิวเตอร์</p>
+            <p class="about-description">ค่ายที่จัดขึ้นโดย คณะวิศวกรรมศาสตร์ ภาควิชาวิศวกรรมคอมพิวเตอร์ มหาวิทยาลัยขอนแก่น ซึ่งค่ายที่จัดขึ้นมาเพื่อน้องๆ ม.ปลาย ที่จะได้เรียนรู้จักคำว่า “วิศวกรรมคอมพิวเตอร์” อย่างจริงจัง น้องๆ จะได้เรียนรู้และสัมผัสถึงกลิ่นอาย ทั้งด้านการเรียน และการทำกิจกรรม</p>
           </div>
 
           <div class="col-xl-6" data-aos="fade-up" data-aos-delay="300">
@@ -101,6 +101,51 @@
               </div>
             </div>
           </div>
+        </div>
+
+      </div>
+
+      <div class="acti">
+
+        <div class="container">
+          <div class="container section-title aos-init aos-animate" data-aos="fade-up">
+            <h2>Activties</h2>
+          </div>
+
+        <div class="row gy-4">
+
+          <div class="col-xl-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
+            <div class="feature-box orange">
+              <h4>Recreation</h4>
+              <img src="assets/img/activi1.png">
+              <p>ในค่าย CESCA#20 น้อง ๆ จะได้สัมผัสกับกิจกรรมสันทนาการที่ทั้งสนุกสนานและเต็มไปด้วยสาระ ไม่ว่าจะเป็นกิจกรรม Ice Breaking ที่ช่วยกระชับความสัมพันธ์ หรือกิจกรรมที่ส่งเสริมความคิดสร้างสรรค์ เปิดโอกาสให้น้อง ๆ ได้แสดงออกอย่างอิสระ เติมเต็มประสบการณ์ที่สนุกและน่าจดจำตลอดค่าย</p>
+            </div>
+          </div><!-- End Feature Borx-->
+
+          <div class="col-xl-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
+            <div class="feature-box orange">
+              <h4>Brainstorm</h4>
+              <img src="assets/img/activi2.png">
+              <p>ค่าย CESCA#20 มาพร้อมกับกิจกรรม brainstorm โดยใช้ STEM (Science, Technology, Engineering, and Mathematics) ที่จะให้น้อง ๆ ได้ฝึกคิดวิเคราะห์ แก้ปัญหา และทำงานร่วมกับเพื่อน ๆ อย่างสร้างสรรค์ ผ่านกิจกรรมที่ทั้งสนุกและท้าทาย</p>
+            </div>
+          </div><!-- End Feature Borx-->
+
+          <div class="col-xl-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
+            <div class="feature-box orange">
+              <h4>Digital Logic Design</h4>
+              <img src="assets/img/activi3.png">
+              <p>ในค่าย CESCA#20 น้อง ๆ จะได้เรียนรู้พื้นฐานของตรรกศาสตร์ดิจิทัล (Digital Logic) ซึ่งเป็นรากฐานสำคัญของวิศวกรรมคอมพิวเตอร์และอิเล็กทรอนิกส์ ผ่านการลงมือปฏิบัติจริง ไม่ว่าจะเป็นการออกแบบวงจรลอจิก และการทำความเข้าใจระบบเลขฐาน ในการแก้ปัญหาต่าง ๆ กิจกรรมนี้จะช่วยเสริมสร้างทักษะการคิดเชิงตรรกะ</p>
+            </div>
+          </div><!-- End Feature Borx-->
+
+          <div class="col-xl-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
+            <div class="feature-box orange">
+              <h4>Basic Electric</h4>
+              <img src="assets/img/activi4.png">
+              <p>ในค่าย CESCA#20 น้อง ๆ จะได้เรียนรู้พื้นฐานเกี่ยวกับไฟฟ้า ตั้งแต่แนวคิดพื้นฐานของกระแสไฟฟ้า วงจรไฟฟ้า ไปจนถึงการใช้งานอุปกรณ์อิเล็กทรอนิกส์เบื้องต้น ผ่านการทดลองและการลงมือปฏิบัติจริง น้อง ๆ จะได้ฝึกต่อวงจรไฟฟ้า ทดลองวัดแรงดันและกระแสไฟฟ้า พร้อมทั้งเรียนรู้หลักการทำงานของอุปกรณ์สำคัญ เช่น ตัวต้านทาน ตัวเก็บประจุ และไดโอด</p>
+            </div>
+          </div><!-- End Feature Borx-->
+
         </div>
 
       </div>
@@ -349,13 +394,13 @@
 
         <div class="col-lg-4 col-md-6 footer-about">
           <a class="logo d-flex align-items-center">
-            <span class="sitename">ช่องทางติดต่อพี่ๆ</span>
+            <span class="sitename">ช่องทางติดต่อพี่ค่าย</span>
           </a>
           <ul>
+            <li><a>พี่ปาล์มมี่ เบอร์โทรศัพท์ : 094-524-8291</a></li>
             <li><a>พี่ออมสิน เบอร์โทรศัพท์ : 095-1976315</a></li>
             <li><a>พี่ลาเติ้ล เบอร์โทรศัพท์ : 063-8288189</a></li>
             <li><a>พี่ศร เบอร์โทรศัพท์ : 081-8019992</a></li>
-            <li><a>พี่ปาล์มมี่ เบอร์โทรศัพท์ : 094-524-8291</a></li>
           </ul>
         </div>
 
