--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="register.html">สมัครเข้าค่าย</a>
+      <a class="btn-getstarted" href="https://forms.gle/gPwt43HBU4vXJ4F58">สมัครเข้าค่าย</a>
 
     </div>
   </header>
@@ -72,7 +72,7 @@
               </h1>
 
               <div class="hero-buttons">
-                <a href="register.html" class="btn btn-primary me-0 me-sm-2 mx-1">สมัครเข้าค่าย</a>
+                <a href="https://forms.gle/gPwt43HBU4vXJ4F58" class="btn btn-primary me-0 me-sm-2 mx-1">สมัครเข้าค่าย</a>
               </div>
           </div>
         </div>  
@@ -164,39 +164,53 @@
             <h2>Conditions</h2>
           </div>
 
-        <div class="row gy-4">
+          <div class="row g-5">
 
-          <div class="col-xl-3 col-md-6" data-aos="zoom-in" data-aos-delay="100">
-            <div class="feature-box orange">
-              <i class="bi bi-award"></i>
-              <h4>text</h4>
-              <p>text</p>
-            </div>
-          </div><!-- End Feature Borx-->
-
-          <div class="col-xl-3 col-md-6" data-aos="zoom-in" data-aos-delay="200">
-            <div class="feature-box blue">
-              <i class="bi bi-patch-check"></i>
-              <h4>text</h4>
-              <p>text</p>
-            </div>
-          </div><!-- End Feature Borx-->
-
-          <div class="col-xl-3 col-md-6" data-aos="zoom-in" data-aos-delay="300">
-            <div class="feature-box green">
-              <i class="bi bi-sunrise"></i>
-              <h4>text</h4>
-              <p>text</p>
-            </div>
-          </div><!-- End Feature Borx-->
-
-          <div class="col-xl-3 col-md-6" data-aos="zoom-in" data-aos-delay="400">
-            <div class="feature-box red">
-              <i class="bi bi-shield-check"></i>
-              <h4>text</h4>
-              <p>text</p>
-            </div>
-          </div><!-- End Feature Borx-->
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
+              <div class="testimonial-item">
+                <img src="assets/img/wizard-hat.gif" class="testimonial-img" alt="">
+                <p>
+                  <i class="bi bi-quote quote-icon-left"></i>
+                  <span>กำลังศึกษาในระดับมัธยมศึกษาปีที่ 4 - 5 หรือ ปวช. 1-2 ไม่ว่าจะมาจากสายสามัญหรือสายอาชีพ หากมีใจรักในการเรียนรู้ นี่คือโอกาสของคุณ</span>
+                  <i class="bi bi-quote quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+  
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="200">
+              <div class="testimonial-item">
+                <img src="assets/img/magic-wand-1.gif" class="testimonial-img" alt="">
+                <p>
+                  <i class="bi bi-quote quote-icon-left"></i>
+                  <span>หลงใหลในโลกของคอมพิวเตอร์และแนวคิดของวิศวกรรมคอมพิวเตอร์ ไม่จำเป็นต้องมีพื้นฐานการเขียนโปรแกรม ขอแค่ความอยากเรียนรู้และพร้อมเปิดรับประสบการณ์ใหม่</span>
+                  <i class="bi bi-quote quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+  
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="300">
+              <div class="testimonial-item">
+                <img src="assets/img/crystal-ball.gif" class="testimonial-img" alt="">
+                <p>
+                  <i class="bi bi-quote quote-icon-left"></i>
+                  <span>พร้อมลุยไปกับเรา! ได้รับความยินยอมจากผู้ปกครองให้เข้าร่วมค่ายตลอดระยะเวลาที่กำหนด พร้อมปฏิบัติตามกฎระเบียบ เพื่อประสบการณ์ที่สนุก</span>
+                  <i class="bi bi-quote quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+  
+            <div class="col-lg-6" data-aos="fade-up" data-aos-delay="400">
+              <div class="testimonial-item">
+                <img src="assets/img/magic-wand.gif" class="testimonial-img" alt="">
+                <p>
+                  <i class="bi bi-quote quote-icon-left"></i>
+                  <span>ชอบทำงานเป็นทีม ไม่ใช่แค่เรียนรู้ แต่คุณจะได้พบเพื่อนใหม่ สร้างเครือข่าย และทำงานร่วมกัน</span>
+                  <i class="bi bi-quote quote-icon-right"></i>
+                </p>
+              </div>
+            </div><!-- End testimonial item -->
+  
+          </div>
 
         </div>
 
@@ -331,6 +345,12 @@
 
         <div class="container section-title" data-aos="fade-up">
           <h2>Sponsor</h2>
+        </div>
+
+        <div class="imgspon">
+          <img src="assets/img/clients/kku.png" class="img-fluid" alt="">
+          <img src="assets/img/clients/en.png" class="img-fluid" alt="">
+          <img src="assets/img/clients/CoE.png" class="img-fluid" alt="">
         </div>
 
         <div class="swiper init-swiper">
