--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
   <!-- Vendor CSS Files -->
   <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
   <link href="assets/vendor/aos/aos.css" rel="stylesheet">
   <link href="assets/vendor/glightbox/css/glightbox.min.css" rel="stylesheet">
@@ -218,66 +219,51 @@
 
     </section><!-- /Features Cards Section -->
 
-    <!-- Services Section -->
-    <section id="timeline" class="service section">
-
-      <div class="container" data-aos="fade-up" data-aos-delay="100">
-
+    <section id="timeline" class="timeline-section">
+      <div class="container">
         <div class="container section-title aos-init aos-animate" data-aos="fade-up">
           <h2>Timeline</h2>
         </div>
-        <div class="row stats-row gy-4 mt-5 aos-init aos-animate" data-aos="fade-up" data-aos-delay="500">
-          <div class="col-lg-3 col-md-6">
-            <div class="stat-item">
-              <div class="stat-icon">
-                <i class="bi bi-trophy"></i>
+      <div class="container">
+          <div class="timeline">
+              <div class="timeline-item">
+                  <div class="timeline-content">เปิดรับสมัคร</div>
+                  <div class="timeline-date">5 กุมภาพันธ์ 2568</div>
+                  <div class="timeline-icon">
+                      <img src="assets/img/magic1.png" alt="Icon">
+                  </div>
               </div>
-              <div class="stat-content">
-                <h4>text</h4>
-                <p class="mb-0">text</p>
+              <div class="timeline-item">
+                  <div class="timeline-content">ปิดรับสมัคร</div>
+                  <div class="timeline-date">5 มีนาคม 2568</div>
+                  <div class="timeline-icon">
+                      <img src="assets/img/magic2.png" alt="Icon">
+                  </div>
               </div>
+              <div class="timeline-item">
+                  <div class="timeline-content">ประกาศรายชื่อ</div>
+                  <div class="timeline-date">10 มีนาคม 2568</div>
+                  <div class="timeline-icon">
+                      <img src="assets/img/magic3.png" alt="Icon">
+                  </div>
+              </div>
+              <div class="timeline-item">
+                <div class="timeline-content">ยืนยันสิทธิ์</div>
+                <div class="timeline-date">10 - 12 มีนาคม 2568</div>
+                <div class="timeline-icon">
+                    <img src="assets/img/magic4.png" alt="Icon">
+                </div>
             </div>
+            <div class="timeline-item">
+              <div class="timeline-content">CESCa #20</div>
+              <div class="timeline-date">1 - 4 เมษายน 2568</div>
+              <div class="timeline-icon">
+                  <img src="assets/img/magic5.png" alt="Icon">
+              </div>
           </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="stat-item">
-              <div class="stat-icon">
-                <i class="bi bi-briefcase"></i>
-              </div>
-              <div class="stat-content">
-                <h4>text</h4>
-                <p class="mb-0">text</p>
-              </div>
-            </div>
           </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="stat-item">
-              <div class="stat-icon">
-                <i class="bi bi-graph-up"></i>
-              </div>
-              <div class="stat-content">
-                <h4>text</h4>
-                <p class="mb-0">text</p>
-              </div>
-            </div>
-          </div>
-          <div class="col-lg-3 col-md-6">
-            <div class="stat-item">
-              <div class="stat-icon">
-                <i class="bi bi-award"></i>
-              </div>
-              <div class="stat-content">
-                <h4>text</h4>
-                <p class="mb-0">text</p>
-              </div>
-            </div>
-          </div>
-        </div>
-
       </div>
-
-      
-
-    </section><!-- /Services Section -->
+  </section>
 
 
     <section class="faq-9 faq section " id="faq">
@@ -300,7 +286,7 @@
               <div class="faq-item">
                 <h3>ค่ายนี้จัดขึ้นที่ไหน ?</h3>
                 <div class="faq-content">
-                  <p>ค่ายเยาวชนวิศวกรรมคอมพิวเตอร์ภาคฤดูร้อน ครั้งที่ 20 ( CESCa#20 ) จัดขึ้นที่ตึกเพียริจิตร คณะวิศวกรรมศาสตร์ มหาวืทยาลัยขอนแก่น</p>
+                  <p>ค่ายเยาวชนวิศวกรรมคอมพิวเตอร์ภาคฤดูร้อน ครั้งที่ 20 ( CESCa#20 ) จัดขึ้นที่ตึกเพียริจิตร คณะวิศวกรรมศาสตร์ มหาวิทยาลัยขอนแก่น</p>
                 </div>
                 <i class="faq-toggle bi bi-chevron-right"></i>
               </div><!-- End Faq item-->
