--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
       </nav>
 
-      <a class="btn-getstarted" href="https://forms.gle/gPwt43HBU4vXJ4F58">สมัครเข้าค่าย</a>
+      <a class="btn-getstarted" href="announce.html">ประกาศรายชื่อ</a>
 
     </div>
   </header>
@@ -73,7 +73,7 @@
               </h1>
 
               <div class="hero-buttons">
-                <a href="https://forms.gle/gPwt43HBU4vXJ4F58" class="btn btn-primary me-0 me-sm-2 mx-1">สมัครเข้าค่าย</a>
+                <a href="announce.html" class="btn btn-primary me-0 me-sm-2 mx-1">ประกาศรายชื่อ</a>
               </div>
           </div>
         </div>  
@@ -339,6 +339,7 @@
           <img src="assets/img/clients/CoE.png" class="img-fluid" alt="">
         </div>
 
+        <!---
         <div class="swiper init-swiper">
           <script type="application/json" class="swiper-config">
             {
@@ -391,7 +392,7 @@
           <div class="swiper-pagination"></div>
         </div>
 
-      </div>
+      </div> -->
 
     </section><!-- /Clients Section -->
 
