--- a/announce.html
+++ b/announce.html
@@ -24,7 +24,11 @@
             </table>
             <button id="prevBtn" class="hidden">⬅ Previous Page</button>
             <button id="nextBtn">Next Page ➡</button>
+            <div class="button-container">
+                <a href="https://www.facebook.com/CESCa.KKU" class="button-link">ยืนยันสิทธิ์</a>
+            </div>
         </div>
+        
     </div>
     <script src="assets/js/anjs.js"></script>
 </body>
