--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
 
         <div class="container">
           <div class="container section-title aos-init aos-animate" data-aos="fade-up">
-            <h2>Activties</h2>
+            <h2>Activities</h2>
           </div>
 
         <div class="row gy-4">
