--- a/announce.html
+++ b/announce.html
@@ -24,7 +24,10 @@
             </table>
             <button id="prevBtn" class="hidden">⬅ Previous Page</button>
             <button id="nextBtn">Next Page ➡</button>
-            <div class="button-container">
+            <div class="button-container-left">
+                <a href="index.html" class="button-link">หน้าหลัก</a>
+            </div>
+            <div class="button-container-right">
                 <a href="https://www.facebook.com/CESCa.KKU" class="button-link">ยืนยันสิทธิ์</a>
             </div>
         </div>
