--- a/index.html
+++ b/index.html
@@ -375,18 +375,18 @@
             }
           </script>
           <div class="swiper-wrapper align-items-center">
-            <div class="swiper-slide"><img src="assets/img/clients/ruamyong.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/advice.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/Anissa.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/imaximum.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/sss.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/mayaseven.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/odds.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/coe21.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/coe26.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/coe29.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/jakiti.png" class="img-fluid" alt=""></div>
-            <div class="swiper-slide"><img src="assets/img/clients/talktome.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/.png" class="img-fluid" alt=""></div>
+            <div class="swiper-slide"><img src="assets/img/clients/.png" class="img-fluid" alt=""></div>
 
           </div>
           <div class="swiper-pagination"></div>
