--- a/announce.html
+++ b/announce.html
@@ -28,7 +28,7 @@
                 <a href="index.html" class="button-link">หน้าหลัก</a>
             </div>
             <div class="button-container-right">
-                <a href="https://www.facebook.com/CESCa.KKU" class="button-link">ยืนยันสิทธิ์</a>
+                <a href="https://docs.google.com/forms/d/e/1FAIpQLSeW-Ci9KOUl_W6mp6_32tAwxvb5U4UoB6gnkPiHiN2Vf-0QKw/viewform?usp=sharing" class="button-link">ยืนยันสิทธิ์</a>
             </div>
         </div>
         
