edit for ajarn-feedback

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                 <img src="assets/img/logo.png" alt="Hero Image" class="img-fluid">
               </div>
               <h1 class="mb-4">
-                1 - 4 April 2025
+                1-4 เมษายน 2568
               </h1>
 
               <div class="hero-buttons">
@@ -87,14 +87,14 @@
 
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
-        <div class="row gy-4 align-items-center justify-content-between">
+        <div class="row gy-2 align-items-center justify-content-between">
 
-          <div class="col-xl-5" data-aos="fade-up" data-aos-delay="200">
-            <h2 class="about-title">What is CESCa</h2>
+          <div class="col-xl-6" data-aos="fade-up" data-aos-delay="200">
+            <h2 class="about-title">ค่าย CESCa คืออะไร</h2>
             <p class="about-description">ค่ายที่จัดขึ้นโดย คณะวิศวกรรมศาสตร์ ภาควิชาวิศวกรรมคอมพิวเตอร์ มหาวิทยาลัยขอนแก่น ซึ่งค่ายที่จัดขึ้นมาเพื่อน้องๆ ม.ปลาย ที่จะได้เรียนรู้จักคำว่า “วิศวกรรมคอมพิวเตอร์” อย่างจริงจัง น้องๆ จะได้เรียนรู้และสัมผัสถึงกลิ่นอาย ทั้งด้านการเรียน และการทำกิจกรรม</p>
           </div>
 
-          <div class="col-xl-6" data-aos="fade-up" data-aos-delay="300">
+          <div class="col-xl-5" data-aos="fade-up" data-aos-delay="300">
             <div class="image-wrapper">
               <div class="images position-relative" data-aos="zoom-out" data-aos-delay="400">
                 <img src="assets/img/cescaphoto3.jpeg" alt="Business Meeting" class="img-fluid main-image rounded-4">
@@ -110,7 +110,7 @@
 
         <div class="container">
           <div class="container section-title aos-init aos-animate" data-aos="fade-up">
-            <h2>Activities</h2>
+            <h2>กิจกรรมในค่าย</h2>
           </div>
 
         <div class="row gy-4">
@@ -119,7 +119,7 @@
             <div class="feature-box orange">
               <h4>Recreation</h4>
               <img src="assets/img/activi1.png">
-              <p>ในค่าย CESCA#20 น้อง ๆ จะได้สัมผัสกับกิจกรรมสันทนาการที่ทั้งสนุกสนานและเต็มไปด้วยสาระ ไม่ว่าจะเป็นกิจกรรม Ice Breaking ที่ช่วยกระชับความสัมพันธ์ หรือกิจกรรมที่ส่งเสริมความคิดสร้างสรรค์ เปิดโอกาสให้น้อง ๆ ได้แสดงออกอย่างอิสระ เติมเต็มประสบการณ์ที่สนุกและน่าจดจำตลอดค่าย</p>
+              <p>น้อง ๆ จะได้สัมผัสกับกิจกรรมสันทนาการที่ทั้งสนุกสนานและเต็มไปด้วยสาระ ไม่ว่าจะเป็นกิจกรรม Ice Breaking ที่ช่วยกระชับความสัมพันธ์ หรือกิจกรรมที่ส่งเสริมความคิดสร้างสรรค์ เปิดโอกาสให้น้อง ๆ ได้แสดงออกอย่างอิสระ เติมเต็มประสบการณ์ที่สนุกและน่าจดจำตลอดค่าย</p>
             </div>
           </div><!-- End Feature Borx-->
 
@@ -127,7 +127,7 @@
             <div class="feature-box orange">
               <h4>Brainstorm</h4>
               <img src="assets/img/activi2.png">
-              <p>ค่าย CESCA#20 มาพร้อมกับกิจกรรม brainstorm โดยใช้ STEM (Science, Technology, Engineering, and Mathematics) ที่จะให้น้อง ๆ ได้ฝึกคิดวิเคราะห์ แก้ปัญหา และทำงานร่วมกับเพื่อน ๆ อย่างสร้างสรรค์ ผ่านกิจกรรมที่ทั้งสนุกและท้าทาย</p>
+              <p>กิจกรรม brainstorm โดยใช้ STEM (Science, Technology, Engineering, and Mathematics) ที่จะให้น้อง ๆ ได้ฝึกคิดวิเคราะห์ แก้ปัญหา และทำงานร่วมกับเพื่อน ๆ อย่างสร้างสรรค์ ผ่านกิจกรรมที่ทั้งสนุกและท้าทาย</p>
             </div>
           </div><!-- End Feature Borx-->
 
@@ -135,7 +135,7 @@
             <div class="feature-box orange">
               <h4>Digital Logic Design</h4>
               <img src="assets/img/activi3.png">
-              <p>ในค่าย CESCA#20 น้อง ๆ จะได้เรียนรู้พื้นฐานของตรรกศาสตร์ดิจิทัล (Digital Logic) ซึ่งเป็นรากฐานสำคัญของวิศวกรรมคอมพิวเตอร์และอิเล็กทรอนิกส์ ผ่านการลงมือปฏิบัติจริง ไม่ว่าจะเป็นการออกแบบวงจรลอจิก และการทำความเข้าใจระบบเลขฐาน ในการแก้ปัญหาต่าง ๆ กิจกรรมนี้จะช่วยเสริมสร้างทักษะการคิดเชิงตรรกะ</p>
+              <p>น้อง ๆ จะได้เรียนรู้พื้นฐานของตรรกศาสตร์ดิจิทัล (Digital Logic) ซึ่งเป็นรากฐานสำคัญของวิศวกรรมคอมพิวเตอร์และอิเล็กทรอนิกส์ ผ่านการลงมือปฏิบัติจริง ไม่ว่าจะเป็นการออกแบบวงจรลอจิก และการทำความเข้าใจระบบเลขฐาน ในการแก้ปัญหาต่าง ๆ กิจกรรมนี้จะช่วยเสริมสร้างทักษะการคิดเชิงตรรกะ</p>
             </div>
           </div><!-- End Feature Borx-->
 
@@ -143,7 +143,7 @@
             <div class="feature-box orange">
               <h4>Basic Electric</h4>
               <img src="assets/img/activi4.png">
-              <p>ในค่าย CESCA#20 น้อง ๆ จะได้เรียนรู้พื้นฐานเกี่ยวกับไฟฟ้า ตั้งแต่แนวคิดพื้นฐานของกระแสไฟฟ้า วงจรไฟฟ้า ไปจนถึงการใช้งานอุปกรณ์อิเล็กทรอนิกส์เบื้องต้น ผ่านการทดลองและการลงมือปฏิบัติจริง น้อง ๆ จะได้ฝึกต่อวงจรไฟฟ้า ทดลองวัดแรงดันและกระแสไฟฟ้า พร้อมทั้งเรียนรู้หลักการทำงานของอุปกรณ์สำคัญ เช่น ตัวต้านทาน ตัวเก็บประจุ และไดโอด</p>
+              <p>น้อง ๆ จะได้เรียนรู้พื้นฐานเกี่ยวกับไฟฟ้า ตั้งแต่แนวคิดพื้นฐานของกระแสไฟฟ้า วงจรไฟฟ้า ไปจนถึงการใช้งานอุปกรณ์อิเล็กทรอนิกส์เบื้องต้น ผ่านการทดลองและการลงมือปฏิบัติจริง น้อง ๆ จะได้ฝึกต่อวงจรไฟฟ้า ทดลองวัดแรงดันและกระแสไฟฟ้า พร้อมทั้งเรียนรู้หลักการทำงานของอุปกรณ์สำคัญ เช่น ตัวต้านทาน ตัวเก็บประจุ และไดโอด</p>
             </div>
           </div><!-- End Feature Borx-->
 
@@ -162,7 +162,7 @@
 
         <div class="container">
           <div class="container section-title aos-init aos-animate" data-aos="fade-up">
-            <h2>Conditions</h2>
+            <h2>คุณสมบัติ</h2>
           </div>
 
           <div class="row g-5">
@@ -222,7 +222,7 @@
     <section id="timeline" class="timeline-section">
       <div class="container">
         <div class="container section-title aos-init aos-animate" data-aos="fade-up">
-          <h2>Timeline</h2>
+          <h2>ช่วงเวลา</h2>
         </div>
       <div class="container">
           <div class="timeline">
@@ -270,7 +270,7 @@
 
       <div class="container">
           <div class="container section-title aos-init aos-animate" data-aos="fade-up">
-            <h2>FAQ</h2>
+            <h2>คำถามที่พบบ่อย</h2>
           </div>
 
             <div class="faq-container">
@@ -330,7 +330,7 @@
       <div class="container" data-aos="fade-up" data-aos-delay="100">
 
         <div class="container section-title" data-aos="fade-up">
-          <h2>Sponsor</h2>
+          <h2>ผู้สนับสนุน</h2>
         </div>
 
         <div class="imgspon">
